deploy/k8s/catalogue-db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue-db
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogue-db
  template:
    metadata:
      labels:
        app: catalogue-db
    spec:
      containers:
        - name: catalogue-db
          image: 746227194679.dkr.ecr.us-east-1.amazonaws.com/catalogue-db:17ad4881c9014688f94bac844f8f9ecbdfef9713
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
