deploy/k8s/catalogue-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogue
  template:
    metadata:
      labels:
        app: catalogue
    spec:
      containers:
        - name: catalogue
          image: 746227194679.dkr.ecr.us-east-1.amazonaws.com/catalogue:17ad4881c9014688f94bac844f8f9ecbdfef9713
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
