deploy/k8s/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
        - name: front-end
          image: 746227194679.dkr.ecr.us-east-1.amazonaws.com/front-end:17ad4881c9014688f94bac844f8f9ecbdfef9713
          imagePullPolicy: Always
          ports:
            - containerPort: 8079
