deploy/k8s/catalogue-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogue-db
  namespace: ecommerce
spec:
  selector:
    app: catalogue-db
  ports:
    - port: 3306
      targetPort: 3306
