deploy/k8s/catalogue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogue
  namespace: ecommerce
spec:
  selector:
    app: catalogue
  ports:
    - port: 80
      targetPort: 8080l
