deploy/k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end
  namespace: ecommerce
spec:
  selector:
    app: front-end
  ports:
    - port: 80
      targetPort: 8079
